# End-to-end-ML-System-Benchmark

./: .gitignore  README.md  feature_extraction_hdf5.py  requirements.txt
MNIST_pipeline/: benchmark.py  benchmarking.py  data_preparation.py  main.py  test.py  train.py
backblaze_pipeline/: benchmarking.py  data_preparation.py  main.py  train_and_test.py  visualization.py
config/: config.ini
containers/: Dockerfile
containers/only_umlaut/: Dockerfile  run_script.py  start.sh
containers/umlaut_daphne/: Dockerfile  start.sh
containers/umlaut_daphne_cuda/: Dockerfile  start.sh
docs/: example_umlaut.html  example_umlaut.ipynb  genindex.html  index.html  moduleref.html  objects.inv  py-modindex.html  search.html  searchindex.js  stub_example.html  stub_example.ipynb
e2ebench/: README.md  setup.py
package/: __init__.py  benchmark.py  datamodel.py  decorators.py  visualization.py  visualization_cli.py
pipelines/CIFAR10/: train.py
realTimeBench/: RtBench.py  realTimeBenchmarker.py  webapp.py
so2sat_pipeline/: benchmarking.py  main.py  test_so2sat.py  train_so2sat.py
sphinx/: example_umlaut.ipynb
src/: config.py  data_preparation.py  datamodel.py  decorators.py  main.py  train_random_trees.py
stock_market_pipeline/: benchmarking.py  test
tests/: test.py  unittest.py
umlaut/: setup.cfg  setup.py
umlaut/umlaut/: __init__.py  benchmark.py  datamodel.py  visualization.py  visualization_cli.py
umlaut/umlaut.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
umlaut/umlaut/metrics/: __init__.py  supervised_metrics.py  valued_metrics.py
(+86 files in other folders)
