[metadata]
name = umlaut
version = 0.1.0
description = End-to-end machine learning benchmark
author=Willi Rieck, Christian Jacob, Jonas Schulze, Jost Morgenstern

[options]
packages = find:
zip_safe = True
install_requires =
    matplotlib
    numpy
    pandas
    plotly
    psutil
    pyRAPL
    seaborn
    scikit-learn
    sqlalchemy
    PyInquirer
    typer
    prompt_toolkit==1.0.14
    pymongo>=3.9.0
    pynvml
    torch
    torchmetrics
    tqdm

[options.extras_require]
dev = 
    sphinx
    jupyter
    sphinx-rtd-theme
    nbsphinx

[options.entry_points]
console_scripts =
    umlaut-cli = umlaut.visualization_cli:main